# traverzarr

./: README.md  dev-requirements.txt  pyproject.toml
tests/: conftest.py  test_1_schemas.py  test_2_search.py  test_traverzarr.py
tests/test_data/: zarr.json
tests/test_data/L8/20180102/: zarr.json
tests/test_data/L8/20180102/bands/: zarr.json
traverzarr/: __init__.py  schema.py  search.py
